# iot-project-pedestrian-detector

./: .gitignore  README.md  presentation.pptx  presentation_final.key  start_system.sh
backend/: .env.example  mqtt_to_telegram.py  requirements.txt  sample_event.json
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/components/who_cam/: idf_component.yml
firmware/components/who_cam/who_p4_cam/: sc2336.json
firmware/main/: CMakeLists.txt  Kconfig.projbuild  alarm_mqtt.cpp  alarm_mqtt.hpp  app_main.cpp  frame_cap_pipeline.cpp  frame_cap_pipeline.hpp  idf_component.yml  lcd_preview.cpp  lcd_preview.hpp
